fixed overflow on the home page

--- a/src/components/Home/style.module.css
+++ b/src/components/Home/style.module.css
@@ -1,24 +1,29 @@
 body, html{
-    width: 100%;
-    height: 100%;
+   
     margin: 0;
     padding: 0;
 }
 
 .mainContainer{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     padding: 0;
     margin: 0;
     display: flex;
-}
-.container{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    background-color: #FCA3B9;
     flex-direction: column;
 }
+
+.top{
+    width: 100%;
+    height: 50%;
+}
+
+.bottom{
+    width: 100%;
+    height: 50%;
+    background-color:#FCA3B9 ;
+}
+
 
 .video{
     width: 100%;
@@ -28,6 +33,7 @@ body, html{
 }
 
 .txtContainer{
+    margin-top: 100px;
     display: flex;
     text-align: center;
     flex-direction: column;
@@ -37,7 +43,7 @@ body, html{
 
 h1{
     margin: 0;
-    margin-top:20px;
+    margin-top:40px;
     color:#FCD752;
     font-family: 'Monoton';
     font-size: 70px;
@@ -75,13 +81,11 @@ span{
     }
 
     .top{
-        height: 60%;
-        background-color: black;
+        height: au;
     }
 
     .bottom{
-        height:45% ;
-        background-color: red;
+        height:30% ;
     }
 
     .container{
@@ -89,23 +93,29 @@ span{
     }
 
     .video{
-        height: 61vh;
+        height: 60vh;
         top:0;
     }
 
     h1{
         margin: 0;
-        margin-top:20px;
-        font-size: 40px;
+        margin-top:18px;
+        font-size: 42px;
         padding-left: 0px;
         letter-spacing: 0px;
+    }
+
+    .btnContainer{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .button{
         width: 100px;
         height: 50px;
         margin-top: 10px;
-        background-color:black;
 
     }
     
@@ -116,7 +126,8 @@ span{
 }
 
 .txtContainer{
-    height: 100%;
+    height:50%;
+    margin-top: 0;
 }
 
 
